[package]
name = "msrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.7.0"

[dependencies.windows-sys]
version = "0.30.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'