[package]
name = "pe_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.windows-sys]
version = "0.30.0"
features = [
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"